// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar matches snapshot and renders label 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  font-family: -apple-system,system-UI,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5em;
  font-weight: bold;
  padding: 4px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 0;
  margin-bottom: 0;
}

.c2 {
  border-width: 2px;
  border-color: #fff;
  border-style: solid;
  border-radius: 50%;
  background-color: #f9423a;
  color: #fff;
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-transform: uppercase;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  padding-left: 8px;
}

<div
  class="c0"
>
  <div
    class="c1 c2"
    display="flex"
    height="40px"
    width="40px"
  >
    <p
      class="c3 c4"
    >
      a
    </p>
  </div>
  <span
    class="c5"
  >
    Some author
  </span>
</div>
`;

exports[`Avatar renders without label 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  font-family: -apple-system,system-UI,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5em;
  font-weight: bold;
  padding: 4px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 0;
  margin-bottom: 0;
}

.c2 {
  border-width: 2px;
  border-color: #fff;
  border-style: solid;
  border-radius: 50%;
  background-color: #f9423a;
  color: #fff;
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-transform: uppercase;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0"
>
  <div
    class="c1 c2"
    display="flex"
    height="40px"
    width="40px"
  >
    <p
      class="c3 c4"
    >
      a
    </p>
  </div>
</div>
`;
